--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Christian Waite | Web Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -46,9 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Christian Waite</span>
           <br />
-          I'm the Unknown Developer.
+          I am your Web Developer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -79,11 +79,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                Christian is a highly skilled freelance web developer with a passion for creating high-performance websites and web applications. With nearly 3 years of experience, he has gained proficiency in utilizing a wide range of web technologies such as HTML, CSS, JavaScript, React, Node.js, and WordPress.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                In addition to his technical expertise, Christian is an avid music enthusiast who enjoys attending metal concerts and creating his own music. He values the importance of building connections with people and enjoys exploring new experiences to further expand his horizons.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -112,21 +111,17 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Robo Friends</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    With the RoboFriends website, I exhibited my abilities as a skilled web developer. I created a fully responsive website that features real-time search functionality, allowing users to easily find the information they need. Additionally, I utilized modern web technologies such as React and Tachyons to create a visually appealing and intuitive user interface. Through my development of the RoboFriends website, I have shown that I am capable of delivering innovative and functional web applications.
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://dracomalar93.github.io/robofriends/"
                 >
                   See Live
                 </a>
@@ -134,7 +129,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/dracomalar93/robofriends"
                 >
                   Source Code
                 </a>
@@ -152,8 +147,8 @@
                   >
                     <img
                       alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project.jpg"
+                      class="img-fluid robofriends"
+                      src="assets/project1.jpg"
                     />
                   </div>
                 </a>
