added social links

--- a/src/index.html
+++ b/src/index.html
@@ -297,10 +297,10 @@
           <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/christianawaite/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/dracomalar93/" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
