--- a/src/index.html
+++ b/src/index.html
@@ -270,21 +270,21 @@
     <!-- /END Projects Section -->
 
     <!-- **** Contact Section **** -->
-    <section id="contact">
+    <!-- <section id="contact">
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Book a Consultation</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:ivardhelvig@gmail.com"
+            >Contact Me</a
           >
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- /END Contact Section -->
 
     <!-- **** Footer Section **** -->
