--- a/src/index.html
+++ b/src/index.html
@@ -270,7 +270,7 @@
     <!-- /END Projects Section -->
 
     <!-- **** Contact Section **** -->
-    <!-- <section id="contact">
+    <section id="contact">
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
@@ -284,7 +284,7 @@
           >
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- /END Contact Section -->
 
     <!-- **** Footer Section **** -->
