added 2nd project

--- a/src/index.html
+++ b/src/index.html
@@ -158,17 +158,19 @@
           <!-- /END Project -->
 
           <!-- Notice: each .row is a project -->
-          <!-- <div class="row">
+          <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Face Recognition App</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    "Face Recognition" is a web application built using React that utilizes cutting-edge technologies to provide a fast and accurate facial recognition experience. The app features a user authentication system with a registration and login form, backed by a server-side implementation. Once authenticated, users can upload an image URL of a person's face, and the application will automatically identify and draw a box around the detected face.
+
+One of the most exciting aspects of the application is its use of advanced machine learning techniques to achieve face recognition. The app implements a powerful face recognition API that is seamlessly integrated into the user interface, providing an intuitive and visually stunning experience.
+
+In addition to its advanced facial recognition capabilities, the app also features a visually engaging user interface powered by React Particles, providing an immersive and fun experience.
+
+Overall, "Face Recognition" is an innovative and user-friendly application that demonstrates the power of React, machine learning, and server-side development. It is an excellent tool for anyone interested in exploring the cutting-edge world of facial recognition technology or looking for a fun and engaging user experience.
                   </p>
                 </div>
                 <a
@@ -183,7 +185,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://dracomalar93.github.io/face-recognition/"
                 >
                   Source Code
                 </a>
@@ -191,7 +193,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://github.com/dracomalar93/face-recognition" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -208,7 +210,7 @@
                 </a>
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- /END Project -->
 
           <!-- Notice: each .row is a project -->
