updated description for project 2

--- a/src/index.html
+++ b/src/index.html
@@ -164,13 +164,7 @@
                 <h3 class="project-wrapper__text-title">Face Recognition App</h3>
                 <div>
                   <p class="mb-4">
-                    "Face Recognition" is a web application built using React that utilizes cutting-edge technologies to provide a fast and accurate facial recognition experience. The app features a user authentication system with a registration and login form, backed by a server-side implementation. Once authenticated, users can upload an image URL of a person's face, and the application will automatically identify and draw a box around the detected face.
-
-One of the most exciting aspects of the application is its use of advanced machine learning techniques to achieve face recognition. The app implements a powerful face recognition API that is seamlessly integrated into the user interface, providing an intuitive and visually stunning experience.
-
-In addition to its advanced facial recognition capabilities, the app also features a visually engaging user interface powered by React Particles, providing an immersive and fun experience.
-
-Overall, "Face Recognition" is an innovative and user-friendly application that demonstrates the power of React, machine learning, and server-side development. It is an excellent tool for anyone interested in exploring the cutting-edge world of facial recognition technology or looking for a fun and engaging user experience.
+                    "Face Recognition" is a web application built with React that utilizes a facial recognition API to identify and draw a box around a detected face when users upload an image URL. The app also features user authentication, registration and login forms connected to a backend, and an engaging user interface powered by React Particles. The integration of machine learning techniques makes it a powerful tool for exploring the world of facial recognition technology, while also providing a fun and intuitive user experience.
                   </p>
                 </div>
                 <a
