--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://dracomalar93.github.io/robofriends/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -171,7 +171,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://dracomalar93.github.io/face-recognition/"
                 >
                   See Live
                 </a>
@@ -179,7 +179,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://dracomalar93.github.io/face-recognition/"
+                  href="https://github.com/dracomalar93/face-recognition"
                 >
                   Source Code
                 </a>
@@ -187,7 +187,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://github.com/dracomalar93/face-recognition" target="_blank">
+                <a rel="noreferrer" href="https://dracomalar93.github.io/face-recognition/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -198,7 +198,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project1.jpg"
                     />
                   </div>
                 </a>
